--- a/eureka-server/src/main/docker/Dockerfile
+++ b/eureka-server/src/main/docker/Dockerfile
@@ -5,4 +5,6 @@ COPY start-service.sh ./
 COPY eureka-server-0.0.1-SNAPSHOT.jar ./
 
 EXPOSE 8761
+EXPOSE 8762
+EXPOSE 8763
 ENTRYPOINT ["./start-service.sh"]
