--- a/DOCKER/log-ELK/logstash/pipeline/logstash.conf
+++ b/DOCKER/log-ELK/logstash/pipeline/logstash.conf
@@ -2,12 +2,15 @@ input {
 	tcp {
 		port => 5000
 	}
+	beats {
+    	port => 5044
+  	}
 }
 
 ## Add your filters / logstash plugins configuration here
 
 output {
 	elasticsearch {
-		hosts => "elasticsearch:9200"
+		hosts => "172.17.0.1:9200"
 	}
 }
