--- a/traductor-italian/src/main/resources/application.yml
+++ b/traductor-italian/src/main/resources/application.yml
@@ -1,6 +1,8 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://172.17.0.1:8761/eureka
-  instance:
-    preferIpAddress: true
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://172.17.0.1:8761/eureka
+#  instance:
+#    preferIpAddress: true
+configuration:
+   greeting: Ciao Mondo by default
