add k82 config files

--- a/client-traductor/src/main/resources/application.yml
+++ b/client-traductor/src/main/resources/application.yml
@@ -5,4 +5,6 @@
 #  instance:
 #    preferIpAddress: true
 server:
-    port : 8080
+   port : 8080
+configuration:
+  greeting: Hello World Oracolo. Local Configuration   
